--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@ Unlocked 1/48 <a href="http://github.com/icefox/git-achievements">Git Achievemen
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-      1 achievements
+      3 achievements
+      2 diff
+      1 status
+      1 log
 </pre>
 <script type="text/javascript">
 function showLocked() {
