--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
 
 <h2>Christopher Kolstad's Git Achievements</h2>
-Unlocked 7/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 13 points<br>
+Unlocked 7/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 16 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Apprentice Socialite (Level 2)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
@@ -22,18 +23,19 @@ Unlocked 7/48 <a href="http://github.com/icefox/git-achievements">Git Achievemen
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-     50 branch
+     56 branch
       6 status
       6 achievements
-      4 commit
-      3 push
+      5 commit
+      4 push
+      3 rm
       3 add
       2 diff
       1 up
-      1 rm
       1 remote
       1 log
       1 init
+      1 ignore
       1 clone
 </pre>
 <script type="text/javascript">
