--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
 
 <h2>Christopher Kolstad's Git Achievements</h2>
-Unlocked 7/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 24 points<br>
+Unlocked 8/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 27 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Apprentice Gipsy (Level 2)</div>  <div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 2)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 3)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -25,19 +26,22 @@ Unlocked 7/48 <a href="http://github.com/icefox/git-achievements">Git Achievemen
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    194 branch
-     13 status
-     12 commit
-      8 push
+    296 branch
+     16 status
+     15 commit
+      9 push
+      6 up
+      6 add
       6 achievements
-      5 up
       5 rm
-      4 add
+      5 ignore
+      4 log
+      3 tag
+      2 help
       2 diff
+      1 summary
       1 remote
-      1 log
       1 init
-      1 ignore
       1 clone
 </pre>
 <script type="text/javascript">
@@ -66,7 +70,6 @@ There are 48 Achievements. Some achievements can be leveled up depending on the 
 <li><div class="title">Dentist</div><div class="info">Extracted patches using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -p.</div></li>
 <li><div class="title">Fisherman</div><div class="info">Look for specified patterns in the current repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-grep.html">git-grep</a>.</div></li>
 <li><div class="title">Gardner</div><div class="info">Shows the commit ancestry graph with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show-branch.html">git-show-branch</a></div></li>
-<li><div class="title">Gipsy</div><div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
 <li><div class="title">Goldsmith</div><div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Historian</div><div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Homeowner</div><div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
