--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Christopher Kolstad's Git Achievements</h2>
-Unlocked 9/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 34 points<br>
+Unlocked 9/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 38 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -19,6 +19,7 @@ Unlocked 9/48 <a href="http://github.com/icefox/git-achievements">Git Achievemen
 <li><div class="title">Apprentice Socialite (Level 2)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 3)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Traveler (Level 1)</div>  <div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
 <li><div class="title">Author (Level 4)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
@@ -28,17 +29,18 @@ Unlocked 9/48 <a href="http://github.com/icefox/git-achievements">Git Achievemen
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    319 branch
+    327 branch
      20 status
      16 commit
      10 push
+      7 add
       6 up
-      6 add
       6 achievements
       5 tag
       5 rm
       5 ignore
       4 log
+      2 rev-parse
       2 help
       2 diff
       1 svn
