--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
 
 <h2>Christopher Kolstad's Git Achievements</h2>
-Unlocked 9/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 43 points<br>
+Unlocked 10/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 46 points<br>
 <ul>
+<li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -30,25 +31,26 @@ Unlocked 9/48 <a href="http://github.com/icefox/git-achievements">Git Achievemen
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    445 branch
-     26 status
-     23 commit
-     16 push
-     12 up
-     11 add
+    497 branch
+     55 status
+     26 symbolic-ref
+     24 commit
+     18 push
+     14 up
+     12 add
       7 tag
+      7 help
+      6 rev-parse
       6 ignore
       6 achievements
       5 rm
-      4 rev-parse
-      4 log
-      3 clone
-      2 help
+      5 log
+      5 clone
+      2 init
       2 diff
       1 svn
       1 summary
       1 remote
-      1 init
 </pre>
 <script type="text/javascript">
 function showLocked() {
@@ -60,7 +62,6 @@ function showLocked() {
 <div id="locked">
 There are 48 Achievements. Some achievements can be leveled up depending on the number of times it is used (Used 2 times = level 1, 4 = level 2, 8 = level 3, 16 = level 4, 32 = level 5, etc)
 <ul>
-<li><div class="title">Architect</div><div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Archivist</div><div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Banker</div><div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Baptised</div><div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
