--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Christopher Kolstad's Git Achievements</h2>
-Unlocked 13/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 63 points<br>
+Unlocked 13/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 69 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -32,18 +32,19 @@ Unlocked 13/48 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    786 branch
-    365 status
-    310 symbolic-ref
+    854 branch
+    457 status
+    323 symbolic-ref
      52 help
-     38 commit
-     27 add
-     26 push
-     21 up
+     39 commit
+     30 add
+     29 push
+     22 up
      20 --git-dir=.git
      18 ignore
      12 checkout
