New achievement Stone Mason (Level 5)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Christopher Kolstad's Git Achievements</h2>
-Unlocked 6/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 45 points<br>
+Unlocked 6/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 51 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -26,23 +26,24 @@ Unlocked 6/48 <a href="http://github.com/icefox/git-achievements">Git Achievemen
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    293 status
-    279 symbolic-ref
-    279 branch
-     62 clone
-     22 commit
-     22 add
-     18 help
-     16 push
-      5 ignore
-      4 pull
-      3 rev-parse
+    480 status
+    460 branch
+    458 symbolic-ref
+     63 clone
+     31 add
+     30 commit
+     29 help
+     22 push
+     11 ignore
+      8 pull
+      5 rev-parse
       3 config
+      3 checkout
       2 remote
-      2 checkout
       1 achievements
 </pre>
 <script type="text/javascript">
